--- a/assets/template/program.html
+++ b/assets/template/program.html
@@ -1,10 +1,311 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+<article>
+			<div id="text">
+			
+				<h3>Programa</h3>
+			
+				<div class="maintext">
+				  <h3 class = "fechaprograma">S&aacute;bado 27 de Octubre<br />
+				  </h3>
+                  <p>De 9:00 a 19:00</p>
+                  <p>Para aprovechar al m&aacute;ximo las sesiones, te invitamos a revisar las <a href="https://docs.google.com/document/d/1xelh08J5SuERjCQUVXwGhyIwGyXIHBrFJWF2OkAJ8rw/edit" target="_blank">Recomendaciones t&eacute;cnicas</a> elaboradas por los ponentes. </p>
+                  <table class="table_programa" border="1">
+  <tr>
+    <td width="89" class="hour">Hora</td>
+    <td colspan="4">&nbsp;</td>
+  </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2">8:00 a 8:45</span></td>
+    <td colspan="4"  class="hour"><span class="Estilo2 title"><b>Recepci&oacute;n de asistentes</b></span></td>
+  </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2">9:00 a 9:30</span></td>
+    <td colspan="4" class="hour"><span class="Estilo2 title"><b>Inauguraci&oacute;n</b></span></td>
+  </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2">9:30 a 10:00</span></td>
+    <td colspan="4" class="hour"><span class="Estilo2 title"><b>Introduction, conferencia  GDG Lima and Google DevRel</b></span></td>
+  </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2">10:00 a 10:20</span></td>
+    <td colspan="4" class="hour"><span class="Estilo2 title"><b>Sincronizaci&oacute;n con  referentes regionales</b></span></td>
+  </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2">10:20 a 11:00</span></td>
+    <td colspan="4" class="hour"><span class="red bold">Keynote</span></td>
+  </tr>
+  <tr>
+    <td class="hour"></td>
+    <td width="170" style="background-color:#00b050;color:white;">Jugando con Android<br/>
+      <br/>Auditorio principal</td>
+    <td width="141" style="background-color:#e42c2c;color:white;">Paseando por Web<br/>
+      <br/>Aula 1</td>
+    <td width="211" style="background-color:#066eb6;color:white;">Volando en Cloud<br/>
+      <br/>Aula 2</td>
+    <td width="105" style="background-color:#ffc000;color:white;">Call4papers<br/>
+      <br/>Aula 3</td>
+  </tr>
+  <tr>
+    <td class="hour"></td>
+    <td class="hour">
+      <img src="assets/images/programa/android.png" height="50" width="auto" />
+    </td>
+    <td class="hour">
+      <img src="assets/images/programa/html5.png" height="50" width="auto" />
+    </td>
+    <td class="hour">
+      <img src="assets/images/programa/gae.png" height="50" width="auto" />
+    </td>
+    <td class="hour">
+      <img src="assets/images/notas01.png" height="50" width="78" />
+    </td>
+  </tr>
+  <!--<tr>
+    <td class="hour"><span class="Estilo2">11:00 a 12:00</span></td>
+    <td width="157"><h4 class="Estilo2">Mobile</h4>
+        <span class="Estilo2"><img src="include/images/programa/android.png" height="80" width="auto" /> Auditorio principal </span> </td>
+    <td width="175"><h4 class="Estilo2">Web</h4>
+        <span class="Estilo2"><img src="include/images/programa/html5.png" height="80" width="auto" /> Aula 1</span> </td>
+    <td width="205"><h4 class="Estilo2">Cloud</h4>
+        <span class="Estilo2"><img src="include/images/programa/gae.png" height="80" width="auto" /> Aula 2</span> </td>
+    <td width="90"><h4 class="Estilo2">Call4papers</h4>
+        <span class="Estilo2"><img src="include/images/notas01.jpg" height="78" width="78" /> Aula 3 </span> </td>
+  </tr>-->
+  <tr>
+    <td class="hour"><span class="Estilo2">11:00 a 12:00</span></td>
+    <td class="android-talk"><span><b>AppClinic: Revisando los principios b&aacute;sicos de  las aplicaciones Android.</b><br />
+      <br />
++Jhoon Saravia</span></td>
+    <td class="web-talk"><span><b>HTML5: De donde venimos y a donde vamos</b><br />
+      <br />
++Manuel Manrique</span></td>
+    <td class="cloud-talk"><span><b>Apps Script: Automatizaci&oacute;n de procesos en la  nube de Google</b><br />
+      <br />
+  +Charles C&oacute;rdova &amp; +Geferson Pillaca</span></td>
+    
+    <td class="call-talk">
+    <span><b>Google Maps Colaborativo en Desastres Naturales</b><br />
+      <br />+Luis Antonio de Jes&uacute;s Su&aacute;rez Caro</span>
+    </td>
+    
+  </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2">12:00 a 13:00</span></td>
+    <td class="android-talk"><p align="center"><b>Pasos para crear juegos para Android<br /></b>
+   <p> +Carlos Pi&ntilde;&aacute;n</p>
+      </td>
+    <td class="web-talk"><span><b>Html5 Desarrollo Interactivo con el canvas  EaselJS</b><br />
+      <br />
++Eduardo Medina</span></td>
+    <td class="cloud-talk"><span><b>Mi primera app con Google App Engine y Gwt</b><br />
+      <br />
++Armando Meison</span></td>
 
-</body>
-</html>
+    <td class="call-talk">
+    <span><b>Android y la computación f&iacute;sica</b><br />
+      <br />+Romulo Luis Benitez Garcia</span>
+    </td>
+    
+  </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2">13:00 a 14:00</span></td>
+    <td colspan="4" class="hour"><div align="center" class="Estilo2 title">Refrigerio</div></td>
+    </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2">14:00 a 15:00</span></td>
+    <td class="android-talk"><span><b>Desarrollo de Juegos y aplicaciones  Interactivas con Adobe AIR para Android</b><br />
+      <br />
+    +Eduardo Medina
+    </span></td>
+    <td class="web-talk"><p><span><b>Dart: Una vista al lenguaje de Google </b><br />
+          <br />
+      +Carlos Pi&ntilde;&aacute;n</span></p>
+      </td>
+    <td class="cloud-talk"><p align="center"><b>¿Por qu&eacute; las chicas, si somos lindas e inteligentes no participamos de  comunidades tecnol&oacute;gicas? -  GDG Lima  Girls</b></p>
+      <span><br />
++Roxana Panaqu&eacute;, +Maria Jos&eacute; Torres, +Zherly Vega, +Wendy Morales</span></td>
+
+    <td class="call-talk">
+    <span><b>Codeando un juego con HTML5</b><br />
+      <br />+Oscar Pando Morales</span>
+    </td>
+    
+  </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2">15:00 a 16:00</span></td>
+    <td class="android-talk"><span><b>Usando NFC(Near Field Communication) en  android</b><br />
+      <br />
++Hansy Schmitty</span></td>
+    <td class="web-talk"><span><b>An&aacute;lisis del API de  Google Maps y los modelos de negocio que se pueden generar</b><br />
+      <br />
+  +Juan Jos&eacute; Rodr&iacute;guez &amp; +Alvaro Gonzales</span></td>
+    <td class="cloud-talk"><span><b>Mi primer proyecto con GoogleSites y Apps  Script</b><br />
+      <br />
+      +Roxana Panaqu&eacute;&amp; +Charles C&oacute;rdova</span></td>
+
+    <td class="call-talk">
+    <span><b>Automatizaci&oacute;n de control de horas con Apps Script.</b><br />
+      <br />+Walter Jabo</span>
+    </td>
+
+  </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2">16:00 a 17:00</span></td>
+    <td class="android-talk"><span><b>Aplicaciones accesibles con Android</b><br />
+      <br />
+      +Henry Tong Valera</span></td>
+    <td class="web-talk"><span><b>Las novedades de Youtube  API<br />
+      <br />
+    </b>+Freddy Cahuaz</span></td>
+    <td class="cloud-talk"><span><b>Google Cloud Endpoints/Messaging -  AppEngine y Android (Servicios Restfull para aplicaciones Android)</b><br />
+      <br />
++David Motta</span></td>
+
+    <td class="call-talk">
+    <span><b>Vaadin un framework web basado en GWT</b><br />
+      <br />+Jos&eacute; Amadeo Martin Diaz Diaz</span>
+    </td>
+
+  </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2">17:00 a 18:00</span></td>
+    <td colspan="4" class="hour"><span class="red bold">Conferencia magistral</span>
+	     </span><span class="blue big-font"><b>+Nicol&aacute;s  Bortolotti<br />
+         Program Manager At Google</b></span>
+	    </td>
+    </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2">18:00 a 18:30 </span></td>
+    <td colspan="4" class="hour"><span class="Estilo2 title"><b>Retrospectiva del evento</b></span></td>
+  </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2">18:30 a 19:00 </span></td>
+    <td colspan="4" class="hour"><span class="Estilo2 title"><b>Cierre</b></span></td>
+  </tr>
+  <tr>
+    <td colspan="5"><div align="left"><span class="Estilo1">* Programa sujeto a cambios </span></div></td>
+    </tr>
+</table>
+<p class = "fechaprograma">&nbsp;</p>
+<h3 class = "fechaprograma">Domingo 28 de Octubre<br />
+</h3>
+<p>De 8:00 a 17:00 </p>
+<p>Para aprovechar al m&aacute;ximo las sesiones, te invitamos a revisar las <a href="https://docs.google.com/document/d/1xelh08J5SuERjCQUVXwGhyIwGyXIHBrFJWF2OkAJ8rw/edit" target="_blank">Recomendaciones t&eacute;cnicas</a> elaboradas por los ponentes. </p>
+<table class="table_programa" border="1">
+  <tr>
+    <td class="hour" width="89">Hora</td>
+    <td class="hour" colspan="4">&nbsp;</td>
+  </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2">7:30 a 8:30</span></td>
+    <td colspan="4 " class="hour"><span class="Estilo2 title"><b>Recepci&oacute;n de asistentes</b></span></td>
+  </tr>
+  <tr>
+    <td class="hour"></td>
+    <td width="170" style="background-color:#00b050;color:white;">Jugando con Android<br/>
+        <br/>Auditorio principal</td>
+    <td width="155" style="background-color:#e42c2c;color:white;">Paseando por Web<br/>
+        <br/>Aula 1</td>
+    <td width="145" style="background-color:#066eb6;color:white;">Volando en Cloud<br/>
+        <br/>Aula 2</td>
+    <td width="157" style="background-color:#ffc000;color:white;">Volando en Cloud<br/>
+      <br/>Aula 3</td>
+  </tr>
+  <tr>
+    <td class="hour"></td>
+    <td class="hour">
+      <img src="include/images/programa/android.png" height="50" width="auto" />
+    </td>
+    <td class="hour">
+      <img src="include/images/programa/html5.png" height="50" width="auto" />
+    </td>
+    <td class="hour">
+      <img src="include/images/programa/gae.png" height="50" width="auto" />
+    </td>
+    <td class="hour"><img src="include/images/programa/gae.png" height="50" width="auto" />    </td>
+  </tr>
+  <!--<tr>
+    <td class="hour"><span class="Estilo2">11:00 a 12:00</span></td>
+    <td width="157"><h4 class="Estilo2">Mobile</h4>
+        <span class="Estilo2"><img src="include/images/programa/android.png" height="80" width="auto" /> Auditorio principal </span> </td>
+    <td width="175"><h4 class="Estilo2">Web</h4>
+        <span class="Estilo2"><img src="include/images/programa/html5.png" height="80" width="auto" /> Aula 1</span> </td>
+    <td width="155"><h4 class="Estilo2">Cloud</h4>
+        <span class="Estilo2"><img src="include/images/programa/gae.png" height="80" width="auto" /> Aula 2</span> </td>
+    <td width="140"><h4 class="Estilo2">Cloud</h4>
+        <span class="Estilo2"><img src="include/images/programa/gae.png" height="80" width="auto" /> Aula 3 </span></td>
+  </tr>-->
+  
+  <tr>
+    <td class="hour"><span class="Estilo2 hour">8:30 a 9:50</span></td>
+    <td class="Estilo2 android-talk"><p align="center"><b><span class="l"><img src="include/images/hangout.png" width="25" height="24" align="left" /></span>Workshop:   Introducci&oacute;n al desarrollo  multiplataforma con PhoneGap y jQueryMobile</b><br />
+      <br />
+    +Adri&aacute;n Catal&aacute;n<br />
+        GDG Guatemala<br />
+    Guatemal</p>
+      </td>
+    <td class="Estilo2 web-talk"><p align="center"><b><span class="l"><img src="include/images/hangout.png" width="25" height="24" align="left" /></span>Workshop: File System API e Indexed DB con HTML5</b><b><br />
+      <br />
+              </b>+Cristian Rinaldi<br />
+        ADTG UTN Santa F&eacute; Argentina</p>      </td>
+    <td class="Estilo2 cloud-talk"><p align="center"><b><span class="l"><img src="include/images/hangout.png" width="25" height="24" align="left" /></span>Workshop: Mi primer programa en Dart, pero no el ultimo</b><br />
+      <br />
+      +Pablo Moyano<br />
+          GDG Buenos Aires<br />
+    Argentina</p>
+      </td>
+    <td class="call-talk Estilo2"><p align="center"><b><span class="l"><img src="include/images/hangout.png" width="25" height="24" align="left" /></span>Workshop: Prediction API<br />
+      <br />
+    </b>+Mat&iacute;as Molinas<br /> 
+    GDG Santa Fe<br /> 
+    Argentina</p>
+      </td>
+  </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2 hour">9:50 a 10:10</span></td>
+    <td colspan="4" class="Estilo2 hour title2">Coffee Break</td>
+  </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2 hour">10:15 a 11:10</span></td>
+    <td colspan="4" class="Estilo2 hour title"><div align="center" class="Estilo2">
+        <p align="center"><span class="bold red">Conferencia  magistral: El ecosistema de emprendimiento en Brasil<br />
+        </span><span class="blue big-font">+Antonio  Neto Mar&iacute;n<br />
+          Google Advocate At Google</span></p>
+        </div></td>
+  </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2 hour">11:10 a 12:00</span></td>
+    <td colspan="4" class="hour title small-font"><div align="center">Panel de discusi&oacute;n con expertos: &quot;C&oacute;mo Google aport&oacute; en sus modelos de negocio&quot;</div></td>
+    </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2 hour">12 a 12:30</span></td>
+    <td colspan="4" class="Estilo2 hour title"><div align="center" class="Estilo2"><span class="red bold">Innovation @ Google<br />
+      </span><span class="blue big-font">+Nicol&aacute;s  Bortolotti<br />
+         Program Manager At Google</span></div></td>
+    </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2 hour">12:30 a 14:00</span></td>
+    <td colspan="4" class="Estilo2 hour title"><div align="center" class="">Taller de Business Model Canvas</div></td>
+    </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2 hour">14:00 a 3:00</span></td>
+    <td colspan="4" class="Estilo2 hour title2"><div align="center">Coffee Break</div></td>
+  </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2">15:00 a 16:00</span></td>
+    <td colspan="4" class="Estilo2 hour title"><div align="center" >Sustentaci&oacute;n de ideas</div></td>
+  </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2">16:00 a 16:30</span></td>
+    <td colspan="4" class="Estilo2 hour title"><div align="center" >Cierre conclusiones</div></td>
+  </tr>
+  <tr>
+    <td class="hour"><span class="Estilo2">16:30 a 17:00 </span></td>
+    <td colspan="4" class="Estilo2 hour title"><div align="center" >Sorpresas</div></td>
+  </tr>
+  <tr>
+    <td colspan="5"><div align="left"><span class="Estilo1">* Programa sujeto a cambios </span></div></td>
+  </tr>
+</table>
+<p class = "fechaprograma">&nbsp;</p>
+</div>
+			</div>
