--- a/assets/template/sponsor.html
+++ b/assets/template/sponsor.html
@@ -1,10 +1,32 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+<article>
+	<div id="text">
 
-</body>
-</html>
+		<h3>Sponsors</h3>
+
+		<div class="maintext">
+
+			<div id="sponsors">
+
+				<div class="row">
+
+					<div class="col">
+						<a href="http://www.google.com" target="_blank"><img src="assets/images/sponsor01.png" height="128" width="auto"/></a>							</div>
+
+	  <div class="col">
+						<a href="http://www.dvlatamsouthregion.com.ar/" target="_blank"><img src="assets/images/sponsor02.png" height="128" width="auto"/></a>							</div>
+
+<div class="col">
+						<a href="http://www.usmp.edu.pe" target="_blank"><img src="assets/images/sponsor03.png" height="128" width="auto"/></a>							</div>
+
+				  <div class="clear"></div>
+				  <div class="col">						    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://www.cloudware360.com/" target="_blank"><img src="include/images/cw360.jpg" border="0" height="100" width="250"></a> </div>
+
+				  <div class="clear"></div>
+
+				</div>
+
+			</div>
+
+		</div>
+	</div>
+</article>
