--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -45,3 +45,9 @@ footer a#network_facebook
     width: 50px;
     height: 50px;
 }
+
+<!-- /* canvas */ -->
+#canvas
+{
+    border: 1px inset #333333;
+}
