--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -7,6 +7,7 @@ body
     padding: 0;
     margin: 0;
     background: #FFFFFF;
+    text-align: center;
 }
 #pagecontent
 {
@@ -52,6 +53,9 @@ footer a#network_facebook
 #canvasapp
 {
     border: 1px inset #333333;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
 }
 
 .container{
