--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -148,13 +148,28 @@ footer a#network_facebook
 }
 
 footer{
+    background: #FFFFFF;
     margin: 0;
     padding: 0;
     bottom: 0px;
-    position: relative;
+    left: 0px;
+    position: fixed;
     clear: both;
     z-index: 10;
     width: 100%;
     height: 60px;
 }
 
+footer p{
+    padding-top: 10px;
+}
+
+footer p.pull-left
+{
+    margin-left: 15px;
+}
+
+footer p.pull-right
+{
+    margin-right: 15px;
+}
