Seccion Colaboradores done
done

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -32,6 +32,46 @@
 	background-image: url(../images/alevandie220.jpg);
 }
 
+.ch-img-5 { 
+	background-image: url(../images/juanjose220.jpg);
+}
+
+.ch-img-6 { 
+	background-image: url(../images/roxana220.jpg);
+}
+
+.ch-img-7 { 
+	background-image: url(../images/majo220.jpg);
+}
+
+.ch-img-8 { 
+	background-image: url(../images/wendy220.jpg);
+}
+
+.ch-img-9 { 
+	background-image: url(../images/zherly220.jpg);
+}
+
+.ch-img-10 { 
+	background-image: url(../images/lennon220.jpg);
+}
+
+.ch-img-11 { 
+	background-image: url(../images/jhoon220.jpg);
+}
+
+.ch-img-12 { 
+	background-image: url(../images/alvaro220.jpg);
+}
+
+.ch-img-13 { 
+	background-image: url(../images/hansy220.jpg);
+}
+
+.ch-img-14 { 
+	background-image: url(../images/meison220.jpg);
+}
+
 .ch-info {
 	position: absolute;
 	width: 100%;
