--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -88,6 +88,14 @@
 	background-image: url(../images/jimmy220.jpg);
 }
 
+.ch-img-19 { 
+	background-image: url(../images/gdglima220.jpg);
+}
+
+.ch-img-20 { 
+	background-image: url(../images/davidc220.jpg);
+}
+
 .ch-info {
 	position: absolute;
 	width: 100%;
