--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -79,6 +79,7 @@ footer a#network_facebook
 <!-- /* canvas */ -->
 #canvasapp
 {
+    border: 1px solid #9C9898;
     margin-left: auto;
     margin-right: auto;
     padding: 10px;
