--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -96,6 +96,10 @@
 	background-image: url(../images/davidc220.jpg);
 }
 
+.ch-img-21 { 
+	background-image: url(../images/ernesto220.jpg);
+}
+
 .ch-info {
 	position: absolute;
 	width: 100%;
