--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -58,7 +58,7 @@
 }
 
 .ch-img-3 { 
-	background-image: url(../images/9.jpg);
+	background-image: url(../images/belatrix220.jpg);
 	z-index: 10;
 }
 
