--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -100,6 +100,11 @@
 	background-image: url(../images/ernesto220.jpg);
 }
 
+.ch-img-22 { 
+	background-image: url(../images/laura220.jpg);
+}
+
+
 .ch-info {
 	position: absolute;
 	width: 100%;
