--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -150,18 +150,23 @@ background: #da4940;
 
 .active2 {
 background: #4d8cf6;
+text-transform: uppercase;
 }
 
 .active3 {
 background: #0a9953;
+text-transform: uppercase;
+
 }
 
 .active4 {
 background: #f8c63f;
+text-transform: uppercase;
 }
 
 .active5 {
 background: #4c4a4b;
+text-transform: uppercase;
 }
 
 
@@ -319,6 +324,9 @@ padding:15px 40px;
 
 }
 
+footer .pull-right{
+    display: none;
+}
 .tours div.span3 img{
     width: 50%;
 
