--- a/assets/css/style5.css
+++ b/assets/css/style5.css
@@ -79,6 +79,23 @@
 	background-image: url(../images/federico220.jpg);
 }
 
+/*Members*/
+
+.ch-img-25 {
+	background-image: url(../images/hernan220.jpg);
+}
+
+.ch-img-26 {
+	background-image: url(../images/eduardo220.jpg);
+}
+
+.ch-img-27 {
+	background-image: url(../images/meison220.jpg);
+}
+
+.ch-img-28 {
+	background-image: url(../images/alevandie220.jpg);
+}
 
 
 .ch-info h3 {
