--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -146,6 +146,7 @@ footer a#network_facebook
 background: #da4940;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 0px;
+    text-transform: uppercase;
 }
 
 .active2 {
