--- a/assets/css/style5.css
+++ b/assets/css/style5.css
@@ -97,6 +97,10 @@
 	background-image: url(../images/alevandie220.jpg);
 }
 
+.ch-img-30 {
+	background-image: url(../images/dipoo220.jpg);
+}
+
 
 .ch-info h3 {
 	color: #fff;
